base-deployments/nextcloud/k8s-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
spec:
  type: ClusterIP
  selector:
    app: nextcloud
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
